# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  http-client.env.json  notes  test.http
.github/workflows/: general.yml
configuration/: base.yaml  production.yaml
migrations/: 20221118131020_create_subscriptions_table.sql  20221208220338_make_status_not_null_in_subscriptions.sql  20221220214230_create_users_table.sql  20221229121544_seed_user.sql
scripts/: init_db.sh  init_redis.sh  publish.sh  push_migrations.sh  run.sh  zero2prod.env
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  home.rs  login.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  newsletter.rs  password.rs
src/routes/admin/newsletter/: newsletter_get.rs  newsletter_post.rs
src/routes/admin/password/: password_get.rs  password_post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login_post.rs  post.rs
tests/: health_check.rs
tests/api/: change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
tests/api/helpers/: test_user.rs
