[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path="src/main.rs"
name="zero2prod"

[dependencies]
actix-web = "4"
anyhow = "1"
argon2 = { version = "0.4", features = ["std"] }
base64 = "0.13"
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
config = "0.13"
hex = "0.4"
htmlescape = "0.3"
hmac = { version = "0.12", features = ["std"] }
rand = { version = "0.8", features=["std_rng"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"]}
serde-aux = "3"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.6"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1"
url = "2.3.1"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
validator = "0.14"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
once_cell = "1"
claim = "0.5"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
serde_json = "1"
wiremock = "0.5"
linkify = "0.8"
